# rpn_calculator

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  dockerfile
.github/workflows/: ci.yml
html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  globals_vars.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  rpn_8cpp.html  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8h.html  rpn_8h__incl.map  rpn_8h__incl.md5  rpn_8h_source.html
html/search/: all_0.js  all_3.js  all_8.js  all_9.js  files_1.js  functions_0.js  functions_2.js  functions_5.js  searchdata.js  variables_0.js
include/: rpn.h
latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  rpn_8cpp.tex  rpn_8cpp__incl.md5  rpn_8h.tex  rpn_8h__incl.md5  rpn_8h_source.tex
src/: CMakeLists.txt  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
